# holocron-python

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/holocron/: __init__.py  _partitioner.py  _record.py  _transport.py  _wire.py  errors.py  producer.py
tests/: conftest.py  test_partitioner.py  test_producer.py  test_smoke.py  test_transport.py  test_wire.py
